Bug #46985
common: validate type CephBool cause 'invalid command json'
% Done:
0%
Source:
Community (dev)
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Description
while (!validate_cmd(m_cct, p->second.desc, cmdmap, errss)) {
++p;
if (p->first != prefix) {
delete f;
return on_finish(-EINVAL, "invalid command json", empty);
}
}
don't need to check prefix in while loop because previous already done.
Related issues
History
#1 Updated by Nathan Cutler 5 months ago
- Project changed from Ceph to CephFS
- Status changed from New to Fix Under Review
- Pull request ID set to 36459
#2 Updated by Patrick Donnelly 5 months ago
- Assignee set to Yanhu Cao
- Target version set to v16.0.0
- Source set to Community (dev)
- Backport set to octopus,nautilus
Just this commit needs backported:
common: fix validate type CephBool cause 'invalid command json'
Fixes: https://tracker.ceph.com/issues/46985
Signed-off-by: Yanhu Cao <gmayyyha@gmail.com>
#3 Updated by Patrick Donnelly 5 months ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Nathan Cutler 5 months ago
- Copied to Backport #47085: octopus: common: validate type CephBool cause 'invalid command json' added
#5 Updated by Nathan Cutler 5 months ago
- Copied to Backport #47086: nautilus: common: validate type CephBool cause 'invalid command json' added
#6 Updated by Brad Hubbard 4 months ago
- Related to Bug #47179: AdminSocket::do_accept() terminate called after throwing an instance of 'std::out_of_range' added
#7 Updated by Brad Hubbard 4 months ago
This change causes the failure seen in #47179. Could we either revert it or modify it so it reinstates the old behaviour?
#8 Updated by Neha Ojha 4 months ago
https://github.com/ceph/ceph/pull/37098 fixes a bug in https://github.com/ceph/ceph/pull/36459 and needs backport too.
#9 Updated by Nathan Cutler 3 months ago
Neha Ojha wrote:
https://github.com/ceph/ceph/pull/37098 fixes a bug in https://github.com/ceph/ceph/pull/36459 and needs backport too.
That's #47179 which has already been backported to octopus by https://github.com/ceph/ceph/pull/37341