common: fix validate type CephBool cause 'invalid command json'

Fixes: https://tracker.ceph.com/issues/46985
Signed-off-by: Yanhu Cao <gmayyyha@gmail.com>